@@ -1,3 +1,12 @@
+2012-12-17  Halton Huo  <halton.huo@intel.com>
+
+        [EFL] Add ecore_imf_evas to FindEcore.cmake
+        https://bugs.webkit.org/show_bug.cgi?id=105159
+
+        Reviewed by Laszlo Gombos.
+
+        * PlatformEfl.cmake: Add ECORE_IMF_EVAS_LIBRARIES to WebProcess_LIBRARIES
+
 2012-12-17  Huang Dongsung  <luxtella@company100.net>
 
         Coordinated Graphics: Refactor TiledBackingStore code in CoordinatedGraphicsLayer.
